--- a/src/Subject to/User Information/CreateAcont/Customer Account/SignUpPage.module.css
+++ b/src/Subject to/User Information/CreateAcont/Customer Account/SignUpPage.module.css
@@ -84,7 +84,7 @@
 }
 
 .relativeInput input {
-  padding-inline-end: 44px;
+  padding-inline-start: 44px;
 }
 
 .inputGroup input:focus,
